--- a/views/base.pug
+++ b/views/base.pug
@@ -6,6 +6,7 @@ block head
     link(rel="stylesheet", href="/css/style.css")
     link(rel="shortcut icon", type="image/png", href="/img/favicon.png")
     script(src="/assets/jquery/jquery.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.3/sweetalert2.all.min.js")
     script(src="/assets/axios.min.js")
     title Natours | #{title}
 
