--- a/views/_header.pug
+++ b/views/_header.pug
@@ -11,12 +11,11 @@ header.header
   nav.nav.nav--user
   
   if user
-    a.nav__el(href="/login") Logout
-    a.nav__el.nav__el--cta(href="/me") Daud
+    a.nav__el.nav__el--logout(href="/login") Logout
+    a.nav__el.nav__el--cta(href="/api/v1/users/me")
+      img.nav__user-img(src=`/img/users/${user.photo}`, alt="User photo")
+      span= user.name.split(" ")[0]
+
   else
     a.nav__el(href="/login") Login
     a.nav__el.nav__el--cta(href="/signup") Signup
-    //
-      <button class="nav__el">Log in</button>
-        <button class="nav__el nav__el--cta">Sign up</button> 
-//  <section class="overview"> 
